[gd_scene load_steps=29 format=2]

[ext_resource path="res://Enemies/Hannes/Hannes.gd" type="Script" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Hannes/HannesShader.tres" type="Material" id=4]
[ext_resource path="res://Enemies/Hannes/HannesStats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemies/Hannes/HannesSheet.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "HStart"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "HStop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1.45737, -21.3854 ), Vector2( -1.45737, -20.3854 ), Vector2( -1.45737, -19.3854 ), Vector2( -1.45737, -18.3854 ), Vector2( -1.45737, -19.3854 ), Vector2( -1.45737, -20.3854 ), Vector2( -1.45737, -21.3854 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1.45737, -21.3854 ), Vector2( -1.45737, -20.3854 ), Vector2( -1.45737, -19.3854 ), Vector2( -1.45737, -18.3854 ), Vector2( -1.45737, -19.3854 ), Vector2( -1.45737, -20.3854 ), Vector2( -1.45737, -21.3854 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1.45737, -21.3854 ), Vector2( -1.45737, -20.3854 ), Vector2( -1.45737, -19.3854 ), Vector2( -1.45737, -18.3854 ), Vector2( -1.45737, -19.3854 ), Vector2( -1.45737, -20.3854 ), Vector2( -1.45737, -21.3854 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1.45737, -21.3854 ), Vector2( -1.45737, -20.3854 ), Vector2( -1.45737, -19.3854 ), Vector2( -1.45737, -18.3854 ), Vector2( -1.45737, -19.3854 ), Vector2( -1.45737, -20.3854 ), Vector2( -1.45737, -21.3854 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "HoverLeft"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "HoverDown"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "HoverRight"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "HoverUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=11]
blend_point_0/node = SubResource( 7 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 8 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 9 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 10 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=12]
states/Hover/node = SubResource( 11 )
states/Hover/position = Vector2( 644, 104 )
start_node = "Hover"

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[sub_resource type="CircleShape2D" id=14]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=15]
radius = 7.0
height = 4.0

[sub_resource type="CircleShape2D" id=16]
radius = 439.211

[sub_resource type="CircleShape2D" id=17]
radius = 9.15805

[sub_resource type="CircleShape2D" id=18]
radius = 5.0

[node name="Hannes" type="KinematicBody2D"]
collision_layer = 256
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 4 )
position = Vector2( -1.45737, -19.3854 )
texture = ExtResource( 11 )
hframes = 4
frame = 2

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0.111358, 0.111364 )
scale = Vector2( 2.11362, 2.11362 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/HStart = SubResource( 1 )
anims/HStop = SubResource( 2 )
anims/HoverDown = SubResource( 3 )
anims/HoverLeft = SubResource( 4 )
anims/HoverRight = SubResource( 5 )
anims/HoverUp = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )
parameters/Hover/blend_position = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 14 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 512

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 15 )

[node name="HannesStats" parent="." instance=ExtResource( 5 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.454902 )
shape = SubResource( 16 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.707115, -5.20621 )
shape = SubResource( 17 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
visible = false
shape = SubResource( 18 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="ShootOrdinal" type="Timer" parent="."]
one_shot = true

[node name="ShootCardinal" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="HannesStats" to="." method="_on_HannesStats_no_health"]
[connection signal="timeout" from="ShootOrdinal" to="." method="_on_ShootOrdinal_timeout"]
[connection signal="timeout" from="ShootCardinal" to="." method="_on_ShootCardinal_timeout"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
